--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="75"
+    android:viewportHeight="122">
+  <group android:scaleX="0.18442623"
+      android:scaleY="0.3"
+      android:translateX="30.584017"
+      android:translateY="42.7">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M39.34,74.19C36.84,71.58 34.19,69.19 31.38,67C28.56,64.71 25.75,62.47 22.94,60.28C20.23,57.99 17.57,55.65 14.97,53.25C12.36,50.75 9.97,48.04 7.78,45.13C5.49,42.1 3.67,38.82 2.31,35.28C1.06,31.64 0.85,27.89 1.69,24.03C2.52,19.86 4.55,16.22 7.78,13.09C11.01,9.97 14.5,7.52 18.25,5.75C22.31,3.98 26.43,2.78 30.59,2.16C34.76,1.43 38.98,1.01 43.25,0.91C47.52,0.7 51.79,0.7 56.06,0.91C60.44,1.01 64.76,0.96 69.03,0.75C71.01,0.65 72.47,1.22 73.41,2.47C74.45,3.72 74.97,5.13 74.97,6.69C74.97,8.25 74.45,9.71 73.41,11.06C72.47,12.31 71.01,12.99 69.03,13.09C66.01,13.3 62.99,13.41 59.97,13.41C57.05,13.3 54.08,13.2 51.06,13.09C47,12.99 42.89,13.04 38.72,13.25C34.66,13.46 30.65,14.29 26.69,15.75C25.33,16.27 23.88,16.95 22.31,17.78C20.75,18.51 19.29,19.45 17.94,20.59C16.69,21.74 15.65,22.99 14.81,24.34C13.98,25.7 13.61,27.16 13.72,28.72C13.82,30.18 14.19,31.64 14.81,33.09C15.44,34.45 16.22,35.8 17.16,37.16C18.2,38.51 19.29,39.81 20.44,41.06C21.58,42.31 22.68,43.46 23.72,44.5C26.11,46.9 28.61,49.08 31.22,51.06C33.82,53.04 36.43,55.07 39.03,57.16C41.74,59.34 44.45,61.79 47.16,64.5C49.97,67.1 52.36,69.97 54.34,73.09C56.43,76.11 57.94,79.34 58.88,82.78C59.92,86.22 60.07,89.86 59.34,93.72C58.61,97.36 57.21,100.49 55.13,103.09C53.15,105.59 50.75,107.89 47.94,109.97C45.23,111.95 42.31,113.77 39.19,115.44C36.17,117 33.25,118.61 30.44,120.28C28.67,121.32 27,121.53 25.44,120.91C23.98,120.28 22.83,119.29 22,117.94C21.27,116.58 20.96,115.13 21.06,113.56C21.27,111.9 22.26,110.54 24.03,109.5C26.53,108.04 29.03,106.69 31.53,105.44C34.03,104.19 36.48,102.78 38.88,101.22C41.17,99.76 43.15,98.04 44.81,96.06C46.58,93.98 47.47,91.58 47.47,88.88C47.36,86.17 46.48,83.56 44.81,81.06C43.25,78.56 41.43,76.27 39.34,74.19Z"
+        android:fillColor="#000000"/>
+  </group>
 </vector>
